@@ -590,7 +590,7 @@ class RecentChange
 
 	protected function getIRCLine() {
 		global $wgUseRCPatrol, $wgUseNPPatrol, $wgRC2UDPInterwikiPrefix, $wgLocalInterwiki,
-			$wgInternalServer, $wgScript;
+			$wgServer, $wgScript, $wgRC2UDPScriptUrl;
 
 		// FIXME: Would be good to replace these 2 extract() calls with something more explicit
 		// e.g. list ($rc_type, $rc_id) = array_values ($this->mAttribs); [or something like that]
@@ -610,13 +610,18 @@ class RecentChange
 		if( $rc_type == RC_LOG ) {
 			$url = '';
 		} else {
-			// XXX: *HACK* this should use $wgServer, hacked for SSL madness --brion 2005-12-26
-			$url = $wgInternalServer . $wgScript;
+			if( $wgRC2UDPScriptUrl !== false ) {
+				$url = $wgRC2UDPScriptUrl;
+			} else {
+				$url = $wgServer . $wgScript;
+			}
+
 			if( $rc_type == RC_NEW ) {
 				$url .= "?oldid=$rc_this_oldid";
 			} else {
 				$url .= "?diff=$rc_this_oldid&oldid=$rc_last_oldid";
 			}
+
 			if( $wgUseRCPatrol || ($rc_type == RC_NEW && $wgUseNPPatrol) ) {
 				$url .= "&rcid=$rc_id";
 			}
